@@ -1,0 +1,5 @@
+.. c:function:: void f(int i)
+
+	- :c:var:`i`
+
+- :c:var:`f.i`
