@@ -21,6 +21,8 @@ Bugs fixed
 * C, fix anon objects in intersphinx.
 * #8270, C++, properly reject functions as duplicate declarations if a
   non-function declaration of the same name already exists.
+* C, fix references to function parameters.
+  Link to the function instead of a non-existing anchor.
 
 
 Testing
